Updates from Overleaf

--- a/Manuscript/Supplementary_Information/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information/Supplementary_Information.tex
@@ -253,7 +253,7 @@ Within the equations that govern the silicate weathering component of GEOCLIM, w
     2$\times$10$^{-5}$ & 2$\times$10$^{-3}$ & -0.2 & 2$\times$10$^{-3}$ & 2000 & 1000 \\
     5$\times$10$^{-5}$ & 5$\times$10$^{-3}$ & -0.1 & 3$\times$10$^{-3}$ & 2500 & 1500 \\
     1$\times$10$^{-4}$ & 1$\times$10$^{-2}$ & 0 & 5$\times$10$^{-3}$ & 3000 & 2000 \\
-    2$\times$10$^{-4}$ & 2$\times$10$^{-2}$ & 0.1 &  & 3500 & 2500 \\
+    2$\times$10$^{-4}$ & 2$\times$10$^{-2}$ & 0.1 & 1$\times$10$^{-2}$ & 3500 & 2500 \\
     5$\times$10$^{-4}$ & 5$\times$10$^{-2}$ & 0.3 &  & 4000 & 3000 \\
     1$\times$10$^{-3}$ & 1$\times$10$^{-1}$ &  &  &  &  \\
     2$\times$10$^{-3}$ & 2$\times$10$^{-1}$ &  &  &  &  \\
@@ -267,7 +267,7 @@ Within the equations that govern the silicate weathering component of GEOCLIM, w
 \end{center}
 \end{table}
 
-We then compute spatially-resolved long-term \COtwo consumption (i.e. Ca+Mg fluxes) using present-day runoff, temperature, and slope fields. As described in the main text, we then sum the computed \COtwo consumption over large-scale watersheds that appear in the global compilation of \citet{Gaillardet1999a}, as well as smaller-scale watersheds of the Amazon Basin (HYBAM network) in the compilation of \citet{Moquet2011a, Moquet2016a, Moquet2018a}. 80 watersheds in total are used in this study. We calculate the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of these basins:
+We then compute spatially-resolved long-term \COtwo consumption (i.e. Ca+Mg fluxes) using present-day runoff (UNH/GRDC Composite Runoff Fields V1.0; \citealp{Fekete1999a}), temperature (CRU TS v.4.03; \citealp{Harris2013a}), and slope (Shuttle Radat Topography Mission; \citealp{Farr2007a}) fields. As described in the main text, we then sum the computed \COtwo consumption over large-scale watersheds that appear in the global compilation of \citet{Gaillardet1999a}, as well as smaller-scale watersheds of the Amazon Basin (HYBAM network) in the compilation of \citet{Moquet2011a, Moquet2016a, Moquet2018a}. 80 watersheds in total are used in this study. We calculate the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of these basins:
 
 \begin{equation}
     r^{2} = 1 - \frac{\sum\left[ \log_{10}(M_{i}) - \log_{10}(O_{i}) \right]^{2}}{\sum\left[ \log_{10}(O_{i}) - \overline{\log_{10}(O)} \right]^{2}}
@@ -310,7 +310,7 @@ We use temperature and runoff fields from a subset of the GFDL CM2.0 experiments
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=1\textwidth]{Figures/scenario_pCO2_all.pdf}
+    \includegraphics[width=1\textwidth]{Manuscript/Figures/scenario_pCO2_all.pdf}
     \caption{Steady-state \pCOtwo estimates from GEOCLIM for the various scenarios discussed in the text. For each of the ten scenarios, each point represents an estimate from one of the 3,339 unique parameter combinations that resulted in reasonable total global \COtwo consumption and most closely matched \COtwo consumption estimated from watershed data (see SI). The box encloses the middle 50\% of the \pCOtwo estimates (i.e. the interquartile range), and the notch represents the median with its 95\% confidence interval. The whiskers extend to 1.5$\times$ the interquartile range, or to the minimum/maximum of the estimates if no estimates are below/above this range.}
     \label{fig:scenario_pCO2_all}
 \end{figure}
@@ -319,13 +319,15 @@ We use geological data to quantify the changes in the area of I\&NG over the pas
 
 To explore the sensitivity of our results to the inclusion of the Sunda Shelf, we also tested ``reduced I\&NG'' scenarios for 15, 10, and 5~Ma, which are identical to that of the ``reduced I\&NG + Sunda Shelf'' scenarios without the addition of the Sunda Shelf. We find that the estimated steady state \pCOtwo's for the ``reduced I\&NG'' scenarios are only marginally higher than those of the ``reduced I\&NG + Sunda Shelf'' scenarios (Fig. \ref{fig:scenario_pCO2_all}), suggesting that our results are largely insensitive to the inclusion of the Sunda Shelf. This insensitivity can be attributed to the low Ca+Mg concentrations of felsic and sediment lithologies in conjunction with the low slope values distributed across the shelf.
 
+The decrease in \pCOtwo that we estimate associated with the emergence of I\&NG since 5~Ma ($\sim$120~ppm) is greater than that proposed in \citet{Molnar2015a} ($\sim$19~ppm). This 19~ppm value in \citet{Molnar2015a} is obtained from an equation that assumes a direct linear relationship between mean global temperature and changes in weathering-rate-weighted land area, scaled by a factor $\alpha$ that is intended to account for the influence of both runoff and temperature (Equation 3 in \citealp{Molnar2015a}). \pCOtwo is then estimated from $T$ using a simple energy balance equation. However, as discussed in the main text, as \COtwo sinks are removed and \pCOtwo rises, temperature increases and the hydrological cycle is invigorated, causing other weathering sinks to increase until a new steady-state is achieved at higher \pCOtwo. The linear relationship described in Equation \ref{eq:Molnar3} ignores these feedbacks in the global climate system.
+
 \section*{Limitations and Future Directions}
 
 As with any modeling study, there are limitations with the approach. We consider one of the current limitations to be the climate model component of GEOCLIM that was used in this study (GFDL CM2.0) has a lower spatial resolution (2.0\degrees $\times$ 2.5\degrees) than what can be achieved with the latest climate models and computational resources. While this model is effective in capturing the large-scale climatology, using an updated climate model at higher resolution may result in runoff and temperature fields with different spatial distribution and sensitivities to elevation.
 
-Another limitation associated with using a modern-day climate model, is that in the scenarios with varying shorelines, we hold the slope and lithology to be the same as the present-day in each pixel. This means that while we are changing the amount of emergent land, we are not changing the latitudinal or longitudinal position and are keeping the slope of any emerged pixel the same. Given that similar distributions of lithology and slope are reasonable in the past and that latitudinal translation has been relatively minor, we consider this simplification to be reasonable to first-order. However, implementing high-resolution climate models with both varying shorelines and changes in paleogeographic position for these scenarios is a valuable future direction. Additionally, such modeling efforts could give insight into whether associated changes in ocean and atmosphere circulation would have significantly modulated precipitation in I\&NG.  Given that precipitation in this region is primarily driven by large-scale convective upwelling leading to high precipitation over both land and water, the current approach is a reasonable approximation for I\&NG. However, for paleogeographic change that would have very significantly modified precipitation over broad swathes of land such as growth of the Himalaya, this approach of using modern climate model results is not viable.
+Another limitation associated with using a modern-day climate model, is that in the scenarios with varying shorelines, we hold the slope and lithology to be the same as the present-day in each pixel. This means that while we are changing the amount of emergent land, we are not changing the latitudinal or longitudinal position and are keeping the slope of any emerged pixel the same. Given that similar distributions of lithology and slope are reasonable in the past and that latitudinal translation has been relatively minor (Fig. XXX), we consider this simplification to be reasonable to first-order. However, implementing high-resolution climate models with both varying shorelines and changes in paleogeographic position for these scenarios is a valuable future direction. Additionally, such modeling efforts could give insight into whether associated changes in ocean and atmosphere circulation would have significantly modulated precipitation in I\&NG.  Given that precipitation in this region is primarily driven by large-scale convective upwelling leading to high precipitation over both land and water, the current approach is a reasonable approximation for I\&NG. However, for paleogeographic change that would have very significantly modified precipitation over broad swathes of land such as growth of the Himalaya, this approach of using modern climate model results is not viable.
 
-Finally, although the silicate weathering component of GEOCLIM now implements lithology-dependent Ca+Mg concentration, our implementation does not include lithology-dependent kinetics of mineral dissolution. Relative to felsic lithologies, mafic lithologies contain minerals with faster dissolution kinetics (e.g. olivine and plagioclase), and thus incorporating lithology-dependent kinetics of mineral dissolution into our simulations would likely increase the sensitivity of steady-state \pCOtwo to increases in subaerially-exposed land area and tectonic topography of I\&NG. We also do not include the effects of reverse weathering \citep{Michalopoulos1995a}, which could modulate the relationship between liberation of Ca and Mg during silicate weathering and long-term \COtwo consumption.
+Finally, although the silicate weathering component of GEOCLIM now implements lithology-dependent Ca+Mg concentration, our implementation does not include lithology-dependent kinetics of mineral dissolution. Relative to felsic lithologies, mafic lithologies contain a higher concentration of minerals with faster dissolution kinetics (e.g. plagioclase). However, Ca+Mg from both felsic and mafic lithologies is predominantly sourced from minerals with faster dissolution kinetics, and we therefore use the same chemical weathering formulation (including the same activation energy) across lithologies. We also do not include the effects of reverse weathering \citep{Michalopoulos1995a} as it is not clear how it should be parameterized and it is interpreted to be relatively minor flux in the Cenozoic \citep{Isson2018a}. Formation of authigenic clays that scales with Ca and Mg concentration of riverine waters could decrease the \COtwo consumption associated with silicate weathering although the overall trend seen in this study would remain.
 
 \section*{Paleoshoreline Reconstruction and Geological Synthesis}
 
@@ -335,7 +337,7 @@ Several new sources for paleoshoreline data have become available since \citet{M
 
 \subsection*{Malay Peninsula and Sunda Shelf}
 
-Paleogeographic reconstructions of Peninsular Malaysia suggest that it has been largely exposed over the last 20~Ma \citep{Hall2013b, Hall2002a}. Although the majority of the Sunda Shelf is currently submerged, large portions of this flat-lying, relatively stable platform of continental crust were also emergent throughout the Neogene, and were repeatedly subaerially exposed during the Pleistocene as recently as the Last Glacial Maximum \citep{Hall2002a}. Similarities between the terrestrial biotas of Borneo and mainland Southeast Asia confirm the existence of land bridges on the Sunda Shelf throughout the Miocene \citep{Moss1998a}. Eocene through Miocene rifting of the South China Sea resulted in subsidence throughout the Sunda Shelf \citep{Morley2013a}. Grabens associated with this subsidence became freshwater rift lakes that later transitioned to partially enclosed inland seas and extensive brackish or saline wetland environments. Palynological analysis suggests widespread swamp environments persisting through the Late Miocene \citep{Morley2013a}. Basement highs (e.g. the Natuna Arch, currently subaerially exposed as the largely granitic island of Natuna off SW Borneo, as well as the granitic Tin Islands south of the Malay Peninsula) are typically bounded by Paleogene to Neogene basins dominated by shallow marine clastic fill \citep{Darmadi2007a}. Most paleogeographic reconstructions of the region incorporate some degree of exposure of the Sunda Shelf from 20~Ma onwards \citep{Hall2013b, Madon2013a}, although it is omitted in the 5~Ma paleogeographic model of \citet{Molnar2015a}.
+Paleogeographic reconstructions of Peninsular Malaysia suggest that it has been largely exposed over the last 20~Ma \citep{Hall2002a, Hall2013b}. Although the majority of the Sunda Shelf is currently submerged, large portions of this flat-lying, relatively stable platform of continental crust were also emergent throughout the Neogene, and were repeatedly subaerially exposed during the Pleistocene as recently as the Last Glacial Maximum \citep{Hall2002a}. Similarities between the terrestrial biotas of Borneo and mainland Southeast Asia confirm the existence of land bridges on the Sunda Shelf throughout the Miocene \citep{Moss1998a}. Eocene through Miocene rifting of the South China Sea resulted in subsidence throughout the Sunda Shelf \citep{Morley2013a}. Grabens associated with this subsidence became freshwater rift lakes that later transitioned to partially enclosed inland seas and extensive brackish or saline wetland environments. Palynological analysis suggests widespread swamp environments persisting through the Late Miocene \citep{Morley2013a}. Basement highs (e.g. the Natuna Arch, currently subaerially exposed as the largely granitic island of Natuna off SW Borneo, as well as the granitic Tin Islands south of the Malay Peninsula) are typically bounded by Paleogene to Neogene basins dominated by shallow marine clastic fill \citep{Darmadi2007a}. Most paleogeographic reconstructions of the region incorporate some degree of exposure of the Sunda Shelf from 20~Ma onwards \citep{Hall2013b, Madon2013a}, although it is omitted in the 5~Ma paleogeographic model of \citet{Molnar2015a}.
 
 \subsection*{Borneo and Palawan}
 
