--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -112,7 +112,7 @@ Having calibrated the silicate weathering component of GEOCLIM, we use it to est
 
 To explore the sensitivity of global weatherability and climate state to the emergence of I\&NG, we force GEOCLIM using our best estimates of the subaerial extent of islands in the area at ca. 15, 10, and 5~Ma (``reduced I\&NG + Sunda Shelf'' scenarios; Fig. \ref{fig:scenario_pCO2}). Given that the Sunda Shelf is presently submerged, across the shelf we distribute felsic and siliciclastic lithologies and assign shallow slope values in a manner that is consistent with existing observations (see SI). While we modify the land area, the position of the tectonic blocks remain fixed since we use a climate model forced with modern geography. While there has been motion of these tectonic blocks since 15~Ma, it has been relatively minimal, and this fixed scenario is a good approximation of the paleogeography. We also test an end member scenario, in which all islands associated with arc-continent collision in the region are removed (``removed I\&NG'' scenario; Fig. \ref{fig:scenario_pCO2}).
 
-Using the 3,339 unique parameter combinations, the ``removed I\&NG'' scenario resulted in steady-state \pCOtwo values of 598--729~ppm (5--95 percentile), and the ``reduced I\&NG + Sunda Shelf'' scenarios resulted in 533--611~ppm, 466--502~ppm, and 394--412~ppm \pCOtwo for 15, 10, and 5~Ma respectively (Fig. \ref{fig:scenario_pCO2}). These results indicate progressive cooling over the Neogene associated with the emergence of I\&NG, and suggest that without it, pre-industrial \pCOtwo would have been $\sim$533--611~ppm. Estimates of the magnitude and trajectory of \pCOtwo change from the Miocene to the Pliocene are variable between proxy records and associated assumptions underlying their interpretation \cite{Foster2017a, Mejia2017a}. These modeled \pCOtwo values for 15~Ma resemble the higher end of proxy-based \pCOtwo estimates for the early-mid-Miocene \cite{Foster2017a}, indicating that the increase in subaerially-exposed land area and tectonic topography of I\&NG is sufficient to explain long-term cooling of Earth's climate over the Neogene. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for Northern Hemisphere glaciation being significantly lower at $\sim$280~ppm \cite{DeConto2008a}. These modeled values are therefore consistent with Miocene ice sheets on Antarctica followed by Northern Hemisphere ice sheets developing in the Pliocene as \pCOtwo subsequently decreased.
+Using the 3,339 unique parameter combinations, the ``removed I\&NG'' scenario resulted in steady-state \pCOtwo values of 598--729~ppm (5--95 percentile), and the ``reduced I\&NG + Sunda Shelf'' scenarios resulted in 533--611~ppm, 466--502~ppm, and 394--412~ppm \pCOtwo for 15, 10, and 5~Ma respectively (Fig. \ref{fig:scenario_pCO2}). These results indicate progressive cooling over the Neogene associated with the emergence of I\&NG, and suggest that without it, pre-industrial \pCOtwo would have been $\sim$533--611~ppm. Estimates of the magnitude and trajectory of \pCOtwo change from the Miocene to the Pliocene are variable between proxy records and associated assumptions underlying their interpretation \cite{Foster2017a, Mejia2017a, Ji2018a}. These modeled \pCOtwo values for 15~Ma resemble the higher end of proxy-based \pCOtwo estimates for the early-mid-Miocene (see SI), indicating that the increase in subaerially-exposed land area and tectonic topography of I\&NG is sufficient to explain long-term cooling of Earth's climate over the Neogene. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for Northern Hemisphere glaciation being significantly lower at $\sim$280~ppm \cite{DeConto2008a}. These modeled values are therefore consistent with Miocene ice sheets on Antarctica followed by Northern Hemisphere ice sheets developing in the Pliocene as \pCOtwo subsequently decreased.
 
 The results of our I\&NG scenarios highlight the importance of the combination of topography, runoff, and lithology in setting Earth’s climate state. To independently explore the effect of the modern-day surface exposure of lower-slope basaltic lavas on steady-state \pCOtwo \cite{Kent2008a, Kent2013a}, we replace mafic volcanics associated with the Deccan and Ethiopian Traps with the Ca+Mg concentration of bulk continental crust in GEOCLIM (Fig. \ref{fig:scenario_pCO2}). The resulting \pCOtwo is $<$500~ppm, indicating that, while the presence of mafic rocks in these igneous provinces modulates steady-state \pCOtwo, its contribution is less than that of the wetter and higher-relief I\&NG.
 
