create degassing file

--- a/Code/Notebooks/GEOCLIM_parameter_exploration.ipynb
+++ b/Code/Notebooks/GEOCLIM_parameter_exploration.ipynb
@@ -4140,35 +4140,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8581d09e1d5f4aa9b9eb6dbbb48837d9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=5380), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# choose False for both if you don't want to sort\n",
-    "refresh_2 = True\n",
-    "read_in_sorted_pcc = False\n",
+    "refresh_2 = False\n",
+    "read_in_sorted_pcc = True\n",
     "\n",
     "if refresh_2:\n",
     "\n",
@@ -4212,9 +4190,9 @@
     "elif read_in_sorted_pcc:\n",
     "    \n",
     "    sorted_pcc = pd.read_csv('../Output/sorted_pcc_'+param_set+'.csv')\n",
-    "    test_ind = sorted_pcc['ind'].values()\n",
-    "    test_max_pcc = sorted_pcc['max_pcc'].values()\n",
-    "    test_run_ID = sorted_pcc['run_ID'].values()\n",
+    "    test_ind = sorted_pcc['ind'].values\n",
+    "    test_max_pcc = sorted_pcc['max_pcc'].values\n",
+    "    test_run_ID = sorted_pcc['run_ID'].values\n",
     "    \n",
     "else:\n",
     "    \n",
@@ -4231,7 +4209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -4268,7 +4246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -4319,7 +4297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -4495,7 +4473,7 @@
        "4  286.0   -0.2  3500.0  1521.0  4759.0  10317.0     0.0  3000.0  0.441401  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4542,6 +4520,81 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CO2_consumption</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>4.798810e+12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>3.427994e+12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>4.980178e+12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>5.552836e+12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>3.805211e+12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   CO2_consumption\n",
+       "0     4.798810e+12\n",
+       "1     3.427994e+12\n",
+       "2     4.980178e+12\n",
+       "3     5.552836e+12\n",
+       "4     3.805211e+12"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "degassing_test_df = pd.DataFrame({'CO2_consumption':test_total_CO2_consumption})\n",
+    "degassing_test_df.reset_index(drop=True, inplace=True)\n",
+    "degassing_test_df.to_csv('../Output/degassing_test_params.csv', index=False)\n",
+    "degassing_test_df.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4550,7 +4603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -4612,7 +4665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
