minor edits to parameter exploration notebook

--- a/Code/Notebooks/GEOCLIM_parameter_exploration.ipynb
+++ b/Code/Notebooks/GEOCLIM_parameter_exploration.ipynb
@@ -376,9 +376,9 @@
    "outputs": [],
    "source": [
     "# observed data\n",
-    "basin_data_nc = Dataset(drive_path+'GEOCLIM_Output/weathering_basins/weathering_Gaillardet+HYBAM_2.nc')\n",
+    "basin_data_nc = Dataset(drive_path+'weathering_basins/weathering_Gaillardet+HYBAM_2.nc')\n",
     "\n",
-    "Gaillardet1999a_Table3 = pd.read_csv(drive_path+'GEOCLIM_Output/weathering_basins/Gaillardet1999a_Table3.csv')\n",
+    "Gaillardet1999a_Table3 = pd.read_csv(drive_path+'weathering_basins/Gaillardet1999a_Table3.csv')\n",
     "Gaillardet1999a_Table3 = Gaillardet1999a_Table3[Gaillardet1999a_Table3['Basins']!='World average']"
    ]
   },
@@ -3533,7 +3533,13 @@
     "* all estimates = 0.285 ± 0.155 Gt/y (0.13-0.44)\n",
     "* preferred estimates = 0.205 ± 0.055 Gt/y (0.15-0.26)\n",
     "\n",
-    "> Gerlach, T. (2011), Volcanic versus anthropogenic carbon dioxide, Eos Trans. AGU, 92(24), 201–202, doi:10.1029/2011EO240001"
+    "> Gerlach, T. (2011), Volcanic versus anthropogenic carbon dioxide, Eos Trans. AGU, 92(24), 201–202, doi:10.1029/2011EO240001\n",
+    "\n",
+    "Lee et al. (2019) estimates endogenic C fluxes:\n",
+    "\n",
+    "* 0.071-0.393 Gt/y\n",
+    "\n",
+    "> ADD LEE REFERENCE HERE"
    ]
   },
   {
@@ -3565,6 +3571,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5.91174022e+12 3.27227311e+13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Gt/y of C\n",
+    "Lee_all = np.array([0.071, 0.393])\n",
+    "\n",
+    "# convert to mol/yr\n",
+    "FW = 12.01\n",
+    "Lee_all = (Lee_all * 1e9 * 1e6) / FW\n",
+    "\n",
+    "print(Lee_all)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3573,7 +3603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -3625,7 +3655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3657,7 +3687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3709,7 +3739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3736,7 +3766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -3788,7 +3818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3812,7 +3842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -3866,7 +3896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3957,7 +3987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -4005,7 +4035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -4036,7 +4066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -4093,7 +4123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4116,7 +4146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -4140,7 +4170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4209,7 +4239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -4246,7 +4276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -4297,7 +4327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -4473,7 +4503,7 @@
        "4  286.0   -0.2  3500.0  1521.0  4759.0  10317.0     0.0  3000.0  0.441401  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4528,7 +4558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -4590,7 +4620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
